VS/Lib/xcgui.h

/// @defgroup groupObjectType 接口句柄类型
/// @ingroup macroDefine
/// @{
/// 炫彩对象类型
enum XC_OBJECT_TYPE  ///<炫彩对象类型
{
	XC_ERROR =-1,      ///<错误类型
	XC_WINDOW = 1,     ///<窗口
	XC_MODALWINDOW ,   ///<模态窗口
	XC_FRAMEWND    ,   ///<框架窗口
	XC_FLOATWND     ,  ///<浮动窗口
	XC_COMBOBOXWINDOW   =   11,   //comboBoxWindow_        组合框弹出下拉列表窗口
	XC_POPUPMENUWINDOW  ,         //popupMenuWindow_       弹出菜单主窗口
	XC_POPUPMENUCHILDWINDOW ,     //popupMenuChildWindow_  弹出菜单子窗口

	//元素
	XC_ELE      = 21, ///<基础元素
	XC_BUTTON   ,     ///<按钮
	XC_RICHEDIT   ,   ///<富文本编辑框
	XC_COMBOBOX    ,  ///<下拉组合框元素
	XC_SCROLLBAR   ,  ///<滚动条元素
	XC_SCROLLVIEW  ,  ///<滚动视图元素
	XC_LIST        ,  ///<列表元素
	XC_LISTBOX    ,   ///<列表框元素
	XC_LISTVIEW   ,   ///<列表视图,大图标
	XC_TREE       ,   ///<树元素
	XC_MENUBAR    ,   ///<菜单条
	XC_SLIDERBAR     ,  ///<滑动条
	XC_PROGRESSBAR   ,  ///<进度条
	XC_TOOLBAR       ,  ///<工具条
	XC_MONTHCAL      ,  ///<月历元素
	XC_DATETIME      ,  ///<时间元素
	XC_PROPERTYGRID  ,  ///<属性网格
	XC_RICHEDIT_COLOR   ,  ///<颜色选择元素
	XC_RICHEDIT_SET,
	XC_TABBAR,          ///<tab条
	XC_TEXTLINK,        ///<文本链接按钮

	XC_PANE          ,  ///<布局窗格
	XC_PANE_SPLIT    ,  ///<布局窗格拖动分割条
	XC_MENUBAR_BUTTON       ,   ///<菜单条上的按钮
	XC_TOOLBAR_BUTTON       ,   ///<工具条上按钮
	XC_PROPERTYPAGE_LABEL   ,   ///<属性页标签按钮
	XC_PIER                 ,   ///<窗格停靠码头
	XC_BUTTON_MENU          ,   ///<弹出菜单按钮
	XC_VIRTUAL_ELE          ,   ///<虚拟元素
	XC_RICHEDIT_FILE        ,   ///<RichEditFile 文件选择编辑框
	XC_RICHEDIT_FOLDER      ,   ///<RichEditFolder  文件夹选择编辑框
	XC_LIST_HEADER          ,   ///<列表头元素

	XC_SHAPE       =61,  ///<形状对象
	XC_SHAPE_TEXT,       ///<形状对象-文本
	XC_SHAPE_PICTURE,    ///<形状对象-图片
	XC_SHAPE_RECT,       ///<形状对象-矩形
	XC_SHAPE_ELLIPSE,    ///<形状对象-圆
	XC_SHAPE_LINE,       ///<形状对象-直线
	XC_SHAPE_GROUPBOX,   ///<形状对象-组框
	XC_SHAPE_GIF,        ///<形状对象-GIF

	//其他类型
	XC_MENU       = 81,  ///<弹出菜单
	XC_IMAGE         ,   ///<图片操作
	XC_HDRAW         ,   ///<绘图操作
	XC_FONT          ,   ///<炫彩字体
	XC_FLASH         ,   ///<flash   
	XC_PANE_CELL     ,  
	XC_WEB           ,

	XC_LAYOUT_OBJECT = 101,  ///<布局对象LayoutObject
	XC_ADAPTER          ,
	XC_ADAPTER_TABLE    ,    ///<数据适配器AdapterTable
	XC_ADAPTER_TREE     ,    ///<数据适配器AdapterTree
	XC_ADAPTER_LISTVIEW ,    ///<数据适配器AdapterListView
	XC_ADAPTER_MAP,          ///<数据适配器AdapterMap

	//无实体对象,只是用来判断布局
	XC_LAYOUT_LISTVIEW     = 111,
	XC_LAYOUT_LIST     ,
	XC_LAYOUT_OBJECT_GROUP ,
	XC_LAYOUT_OBJECT_ITEM  ,
	XC_LAYOUT_PANEL,

	XC_BKINFOM,
	//XC_BUTTON_EX,
};
//#else
//#define	DECLARE_HANDLEX(name) typedef void* name
//#endif

/// @defgroup groupHandle 句柄列表
/// @ingroup macroDefine
/// @{
typedef void*   HXCGUI;   ///<资源句柄
struct  RECTF
{
	float  left;
	float  top;
	float  right;
	float  bottom;
};
///@}


//状态--------------------------------------
/// @defgroup groupCommonState3 普通三种状态
/// @ingroup  macroDefine
/// @{
enum  common_state3_
{
	common_state3_leave=0,  ///<离开
	common_state3_stay,     ///<停留
	common_state3_down,     ///<按下
};
///@}

/// @defgroup groupListItemState List项状态
/// @ingroup macroDefine
/// @{
enum  list_item_state_
{
	list_item_state_leave=0,   ///<项鼠标离开状态
	list_item_state_stay=1,    ///<项鼠标停留状态
	list_item_state_select=2,  ///<项选择状态
};
///@}


/// @defgroup groupTreeItemState Tree项状态
/// @ingroup macroDefine
/// @{
enum  tree_item_state_
{
	tree_item_state_leave=0,   ///<项鼠标离开状态
	tree_item_state_select=1,  ///<项选择状态
};
///@}

/// @defgroup groupLayoutSize 布局大小类型
/// @ingroup macroDefine
/// @{
enum  layout_size_type_
{
	layout_size_type_fixed=0,   ///<指定大小
	layout_size_type_fill,      ///<fill 填充父
	layout_size_type_auto,      ///<auto 自动大小,根据内容计算大小
	layout_size_type_weight,    ///<weight 比例,按照比例分配剩余空间
	layout_size_type_disable,   ///<disable 不使用
};
/////////////////////////////////////////////////////////
//////////////定义结构体/////////////////////////////////
/////////////////////////////////////////////////////////
struct BorderSize_  //4条边的大小
{
	int  leftSize;
	int  topSize;
	int  rightSize;
	int  bottomSize;
};
typedef  BorderSize_  SpaceSize_ , PaddingSize_;
struct  Position
{
	int  iRow;
	int  iColumn;
};
struct  template_info_i  //模板项
{
	int  info;
};
struct listBox_item_i
{
	int     nUserData;  ///<用户绑定数据
	int     nHeight;    ///<项默认高度
	int     nSelHeight; ///<项选中时高度
	list_item_state_  nState;  ///<状态
	int     index;      ///<项索引
	RECT    rcItem;     ///<项坐标
	HXCGUI  hLayout;     ///<布局对象
	template_info_i  *pInfo;   ///<模板信息
};
struct listBox_item_Info_i
{
	int     nUserData;  //用户绑定数据
	int     nHeight;
	int     nSelHeight;
};
struct  listView_item_id_i
{
	int  iGroup;   ///<组索引
	int  iItem;    ///<项索引
};
struct list_item_i
{
	int     index;
	int     iSubItem;
	int     nUserData;
	list_item_state_  nState;
	RECT    rcItem;
	HXCGUI  hLayout;     ///<布局对象
	template_info_i  *pInfo;   ///<模板信息
};
struct list_header_item_i
{
	int     index;
	int     nUserData;
	common_state3_  nState;
	RECT      rcItem;
	HXCGUI    hLayout;     ///<布局对象
	template_info_i  *pInfo;   ///<模板信息
};
struct tree_item_i
{
	int     nID;
	int     nDepth;
	tree_item_state_  nState;
	int     nHeight;
	int     nSelHeight;
	int     nUserData;
	BOOL    bExpand;
	RECT    rcItem;
	HXCGUI  hLayout;     ///<布局对象
	template_info_i  *pInfo;   ///<模板信息
};
struct listView_item_i
{
	int     iGroup;             ///<项所述组索引 -1没有组
	int     iItem;              ///<项在数组中位置索引,如果此致为-1,那么为组
	int     nUserData;           ///<用户绑定数据
	list_item_state_  nState;    ///<状态  
	RECT    rcItem;              ///<整个区域,包含边框
	HXCGUI  hLayout;           ///<布局对象
	template_info_i  *pInfo;   ///<模板信息
};
//布局信息
struct layout_info_i
{
	layout_size_type_  widthType;
	layout_size_type_  heightType;
	short  width;    //宽度
	short  height;   //高度
};
struct  menu_popupWnd_i 
{
	HWINDOW hWindow;    //窗口句柄
	int     nParentID;  //父项ID
};
///菜单背景自绘结构
struct menu_drawBackground_i
{
	HMENUX  hMenu;      ///<菜单句柄
	HWINDOW hWindow;    ///<当前弹出菜单项的窗口句柄
	int     nParentID;  ///<父项ID
};
///菜单项自绘结构
struct  menu_drawItem_i
{
	HMENUX     hMenu;       ///<菜单句柄
	HWINDOW    hWindow;     ///<当前弹出菜单项的窗口句柄
	int        nID;         ///<ID
	int        nState;	    ///<状态 @ref menu_item_flags_
	RECT       rcItem;      ///<坐标
	HIMAGE     hIcon;       ///<菜单项图标
	const wchar_t    *pText;   ///<文本
};
///@}

/// @defgroup group_monthCal_button_type_    月历元素上的按钮类型
/// @ingroup macroDefine
/// @{
enum monthCal_button_type_
{
	monthCal_button_type_today = 0,  ///< 今天按钮
	monthCal_button_type_last_year,  ///< 上一年
	monthCal_button_type_next_year,  ///< 下一年
	monthCal_button_type_last_month, ///< 上一月
	monthCal_button_type_next_month, ///< 下一月
};
///@}

///@defgroup  group_monthCal_item_i_    月历元素项数据
///@ingroup   macroDefine
///@{

/// 月历元素项数据
struct monthCal_item_i
{
	int  nDay;     ///< 日期
	int  nType;    ///< 1上月,2当月,3下月
	int  nState;   ///< 组合状态 monthCal_state_flag_
	RECT rcItem;   ///< 项坐标
};
//hEle      接收事件的元素句柄
//hEventEle 触发事件的元素句柄
//////////////////////////////////////////////////////////////////////

XC_API HELE WINAPI XDateTime_Create(int x, int y, int cx, int cy, HXCGUI hParent);
XC_API void WINAPI XDateTime_SetStyle(HELE hEle,int nStyle);
XC_API int WINAPI XDateTime_GetStyle(HELE hEle);
XC_API void WINAPI XDateTime_GetTime(HELE hEle, int* pnHour, int* pnMinute, int* pnSecond);
XC_API void WINAPI XDateTime_SetTime(HELE hEle, int nHour, int nMinute, int nSecond);
XC_API void WINAPI XDateTime_GetDate(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);
XC_API void WINAPI XDateTime_SetDate(HELE hEle, int nYear, int nMonth, int nDay);
XC_API COLORREF WINAPI XDateTime_GetSelBkColor(HELE hEle);
XC_API void WINAPI XDateTime_SetSelBkColor(HELE hEle, COLORREF crSelectBk, BYTE alpha = 255);
XC_API HELE WINAPI XDateTime_GetButton(HELE hEle, int nType);
XC_API HELE WINAPI XMonthCal_Create(int x, int y, int cx, int cy, HXCGUI hParent);
XC_API void WINAPI XMonthCal_SetToday(HELE hEle, int nYear, int nMonth, int nDay);
XC_API void WINAPI XMonthCal_GetToday(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);
XC_API void WINAPI XMonthCal_SeSelDate(HELE hEle, int nYear, int nMonth, int nDay);
XC_API void WINAPI XMonthCal_GetSelDate(HELE hEle, int* pnYear, int* pnMonth, int* pnDay);
XC_API HELE WINAPI XMonthCal_GetButton(HELE hEle, monthCal_button_type_ nType);
XC_API int WINAPI XC_UnicodeToAnsi(const wchar_t *pIn, int inLen, char *pOut, int outLen);
XC_API int WINAPI XC_AnsiToUnicode(const char *pIn, int inLen, wchar_t *pOut, int outLen);
XC_API void WINAPI XC_DebugToFileInfo(const char *pInfo);//打印调试信息到文件 xcgui_debug.txt
XC_API BOOL WINAPI XC_IsHELE(HXCGUI hEle); //检查句柄
XC_API BOOL WINAPI XC_IsHWINDOW(HXCGUI hWindow); //检查句柄
XC_API BOOL WINAPI XC_IsShape(HXCGUI hShape); //检查句柄
XC_API BOOL WINAPI XC_IsHXCGUI(HXCGUI hXCGUI,XC_OBJECT_TYPE nType);
XC_API HWINDOW WINAPI XC_hWindowFromHWnd(HWND hWnd);
XC_API BOOL WINAPI XC_RegisterWindowClassName(const wchar_t* pClassName); //注册窗口类名
XC_API BOOL WINAPI XC_IsSViewExtend(HELE hEle);  //判断元素是否从滚动视图元素扩展的新元素,包含滚动视图元素
XC_API XC_OBJECT_TYPE WINAPI XC_GetObjectType(HXCGUI hXCGUI);
XC_API HXCGUI WINAPI XC_GetObjectByID(int nID); //通过ID获取对象句柄
XC_API int  WINAPI XC_GetResIDValue(const wchar_t *pName);  //获取资源ID值
XC_API void WINAPI XC_SetPaintFrequency(int nMilliseconds); //设置UI绘制频率