C#/Lib/XCGUI.cs

using System;
using System.Collections.Generic;
using System.Runtime.InteropServices;


/*
 * name    xcgui界面库模块
 * Made    dasemimi
 * time    2016.2.21
 * ver     1.9.5.8
*/
namespace XCGUI
{
    public struct LOGFONTW
    {
        public int      lfHeight;
        public int      lfWidth;
        public int      lfEscapement;
        public int      lfOrientation;
        public int      lfWeight;
        public byte      lfItalic;
        public byte      lfUnderline;
        public byte      lfStrikeOut;
        public byte      lfCharSet;
        public byte      lfOutPrecision;
        public byte      lfClipPrecision;
        public byte      lfQuality;
        public byte      lfPitchAndFamily;
        unsafe public fixed ushort    lfFaceName[32];
    }
    public struct POINTF
    {
        public float x;
        public float y;
    }
    public struct LOGFONT
    {
        public int lfHeight;
        public int lfWidth;
        public int lfEscapement;
        public int lfOrientation;
        public int lfWeight;
        public byte lfItalic;
        public byte lfUnderline;
        public byte lfStrikeOut;
        public byte lfCharSet;
        public byte lfOutPrecision;
        public byte lfClipPrecision;
        public byte lfQuality;
        public byte lfPitchAndFamily;
        unsafe public fixed ushort lfFaceName[32];
    }
    public struct RECT
    {
        public int x;
        public int y;
        public int cx;
        public int cy;
    }
    public struct POINT
    {
        public int x;
        public int y;
    }
    public struct SIZE
    {
        public int cx;
        public int cy;
    }
    public struct PaddingSize_
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct SpaceSize_
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct RECTF
    {
        public float left;
        public float top;
        public float right;
        public float bottom;
    }
    public struct BorderSize_
    {
        public int leftSize;
        public int topSize;
        public int rightSize;
        public int bottomSize;
    }
    public struct Position
    {
        public int iRow;
        public int iColumn;
    }
    public struct template_info_i
    {
        public int info;
    }
    public struct listBox_item_i
    {
        public int nUserData;
        public int nHeight;
        public int nSelHeight;
        public int nState;
        public int index;
        unsafe public RECT* rcItem;
        public int hLayout;
        unsafe public template_info_i* Info;
    }
    public struct listBox_item_Info_i
    {
        public int nUserData;
        public int nHeight;
        public int nSelHeight;
    }
    public struct listView_item_id_i
    {
        public int iGroup;
        public int iItem;
    }
    public struct list_item_i
    {
        public int index;
        public int iSubItem;
        public int nUserData;
        public int nState;
        unsafe public RECT* rcItem;
        public int hLayout;
        unsafe public template_info_i* Info;
    }
    public struct list_header_item_i
    {
        public int index;
        public int nUserData;
        public int nState;
        unsafe public RECT* rcItem;
        public int hLayout;
        unsafe public template_info_i* Info;
    }
    public struct tree_item_i
    {
        public int nID;
        public int nDepth;
        public int nState;
        public int nHeight;
        public int nSelHeight;
        public int nUserData;
        public bool bExpand;
        unsafe public RECT* rcItem;
        public int hLayout;
        unsafe public template_info_i* Info;
    }
    public struct listView_item_i
    {
        public int iGroup;
        public int iItem;
        public int nUserData;
        public int nState;
        unsafe public RECT* rcItem;
        public int hLayout;
        unsafe public template_info_i* Info;
    }
    public struct layout_info_i
    {
        public int widthType;
        public int heightType;
        public short width;
        public short height;
    }
    public struct menu_popupWnd_i
    {
        public int hWindow;
        public int nParentID;
    }
    public struct menu_drawBackground_i
    {
        public int hMenu;
        public int hWindow;
        public int nParentID;
    }
    public struct menu_drawItem_i
    {
        public int hMenu;
        public int hWindow;
        public int nID;
        public int nState;
        unsafe public RECT* rcItem;
        public int hIcon;
        public string Text;
    }
    public struct monthCal_item_i
    {
        public int nDay;
        public int nType;
        public int nState;
        unsafe public RECT* rcItem;
    }



    class XC
    {

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int XDateTime_Create(int x, int y, int cx, int cy, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_SetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern void XDateTime_SetStyle(int hEle, int nStyle);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetStyle", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        public static extern int XDateTime_GetStyle(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetTime", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XDateTime_GetTime(int hEle, int pnHour, int pnMinute, int pnSecond);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_SetTime", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XDateTime_SetTime(int hEle, int nHour, int nMinute, int nSecond);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XDateTime_GetDate(int hEle, int pnYear, int pnMonth, int pnDay);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_SetDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XDateTime_SetDate(int hEle, int nYear, int nMonth, int nDay);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetSelBkColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XDateTime_GetSelBkColor(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_SetSelBkColor", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XDateTime_SetSelBkColor(int hEle, int crSelectBk, byte alpha);

        [DllImport("xcgui.dll", EntryPoint = "XDateTime_GetButton", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XDateTime_GetButton(int hEle, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XMonthCal_Create(int x, int y, int cx, int cy, int hParent);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_SetToday", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XMonthCal_SetToday(int hEle, int nYear, int nMonth, int nDay);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetToday", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XMonthCal_GetToday(int hEle, int pnYear, int pnMonth, int pnDay);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_SeSelDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XMonthCal_SeSelDate(int hEle, int nYear, int nMonth, int nDay);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetSelDate", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XMonthCal_GetSelDate(int hEle, int pnYear, int pnMonth, int pnDay);

        [DllImport("xcgui.dll", EntryPoint = "XMonthCal_GetButton", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XMonthCal_GetButton(int hEle, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XC_UnicodeToAnsi", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_UnicodeToAnsi(string pIn, int inLen, string pOut, int outLen);

        [DllImport("xcgui.dll", EntryPoint = "XC_AnsiToUnicode", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_AnsiToUnicode(string pIn, int inLen, string pOut, int outLen);

        [DllImport("xcgui.dll", EntryPoint = "XC_DebugToFileInfo", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_DebugToFileInfo(string pInfo);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsHELE", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_IsHELE(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsHWINDOW", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_IsHWINDOW(int hWindow);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsShape", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_IsShape(int hShape);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsHXCGUI", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_IsHXCGUI(int hXCGUI, int nType);

        [DllImport("xcgui.dll", EntryPoint = "XC_hWindowFromHWnd", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_hWindowFromHWnd(int hWnd);

        [DllImport("xcgui.dll", EntryPoint = "XC_RegisterWindowClassName", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_RegisterWindowClassName(string pClassName);

        [DllImport("xcgui.dll", EntryPoint = "XC_IsSViewExtend", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern bool XC_IsSViewExtend(int hEle);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetObjectType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_GetObjectType(int hXCGUI);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetObjectByID", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_GetObjectByID(int nID);

        [DllImport("xcgui.dll", EntryPoint = "XC_GetResIDValue", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern int XC_GetResIDValue(string pName);

        [DllImport("xcgui.dll", EntryPoint = "XC_SetPaintFrequency", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
        unsafe public static extern void XC_SetPaintFrequency(int nMilliseconds);
